--- a/One Vision.csproj
+++ b/One Vision.csproj
@@ -8,8 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Tools\**" />
+    <Content Remove="Tools\**" />
+    <EmbeddedResource Remove="Tools\**" />
+    <None Remove="Tools\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="wwwroot\OneVision.ico" />
-    <Content Remove="wwwroot\OneVision\Imagenes\OneVision.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,13 +27,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
+    <PackageReference Include="QuestPDF" Version="2025.5.0" />
+    <PackageReference Include="Rotativa.AspNetCore" Version="1.4.0" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="wwwroot\OneVision.ico" />
-    <None Include="wwwroot\OneVision\Imagenes\OneVision.ico" />
   </ItemGroup>
 
 </Project>
