--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=OneVisionOpticalDB.mssql.somee.com;Database=OneVisionOpticalDB;User Id=OneVisionOptical_SQLLogin_1;Password=1evsd5wrix;Persist Security Info=False;TrustServerCertificate=True;Encrypt=False"
-     },
+        "DefaultConnection": "Server=OpticalDb.mssql.somee.com;Database=OpticalDb;User Id=OneVisionOptical_SQLLogin_2;Password=etvp8qk5ow;Persist Security Info=False;TrustServerCertificate=True;Encrypt=False"
+    },
     /*"ConnectionStrings": {
         "DefaultConnection": "Server=(localdb)\\MSSQLlocalDB;Database=OneVisionDB;Trusted_Connection=True;MultipleActiveResultSets=true"
     },*/
@@ -12,12 +12,10 @@
         }
     },
     "SendGrid": {
-        
+        "ApiKey": "",
         "FromEmail": "onevision572@gmail.com",
         "FromName": "One Vision Optical Center",
-        "LocalBaseUrl": "https://localhost:7202",
-        "ProdBaseUrl": "https://www.onevisionopticalcenter.shop"
-
+        "BaseUrl": "https://onevisionapp.onrender.com"
     },
     "JwtKey": "B4s3RjAz9vHkJ8Rk9MlP2uNzWqLx4gTr",
     "AllowedHosts": "*"
